make my profile prettier

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   </div>
 
   <div class="box_white">
-    <h2 class="green__title">Fullstack Development <i class="material-icons">computer</i></h2>
-    <p>I am passionate about making money with <strong>Fullstack Development</strong>.</p>
+    <h2 class="green__title">Fullstack Development </h2>
+    <p>I am passionate about making money with <strong>Fullstack Development</strong>.<i class="material-icons">computer</i></p>
   </div>
 
   <div class="box_white">
-    <h2 class="green__title">It's verry simple:</h2>
-    <p>YOU GIBBE ME MONEY <strong>ME CODE FOR YOU</strong>.</p>
+    <h2 class="green__title">It's verry simple!</h2>
+    <p>YOU GIVE ME MONEY, <strong>ME GIVE GOOD CODE TO YOU</strong>.</p>
   </div>
 
 
